examples/test/testpolicy18034.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18034
  namespace: namespace411
spec:
  podSelector:
    matchLabels:
      key18: value5
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key34: value1
          key36: value39
          key48: value28
      podSelector:
        matchLabels:
          key23: value12
          key7: value24
